# tutor-contrib-madrasa-s3

./: .hatch_build.py  MANIFEST.in  Makefile  README.rst  pyproject.toml
madrasa_s3/: __about__.py  plugin.py
madrasa_s3/patches/: cms-env  lms-env  openedx-auth  openedx-cms-common-settings  openedx-common-settings  openedx-lms-common-settings
