# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-contrib-madrasa-s3"
description = "madrasa_s3 plugin for Tutor"
authors = [
  { name = "Lawrence McDaniel"}, 
  { email = "lpm0073@gmail.com" },
]
license = { text = "AGPL-3.0-only" }

readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

]
dependencies = [
    "tutor>=18.0.0,<19.0.0",
]
optional-dependencies = { dev = ["tutor[dev]>=18.0.0,<19.0.0"] }

# These fields will be set by hatch_build.py
dynamic = ["version"]

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Documentation = "https://github.com/madrasafree/tutor-contrib-madrasa-s3#readme"
Issues = "https://github.com/madrasafree/tutor-contrib-madrasa-s3/issues"
Source = "https://github.com/madrasafree/tutor-contrib-madrasa-s3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatch-specific configuration
[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["madrasa_s3"]

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/madrasa_s3"]
exclude = ["tests*"]

[project.entry-points."tutor.plugin.v1"]
madrasa_s3 = "madrasa_s3.plugin"
